# openai-agent

./: Notes.txt  README.md  main.py  pyproject.toml
.claude/: settings.local.json
agent_configurations/: agent_level.py  global_level.py  pyproject.toml  run_level.py
azuredevops_agent/: .gitignore  LINKEDIN_POST.md  README.md  app.py  app_handoff.py  handsoff.py  main.py  pyproject.toml
documentations/: shopify_customerCreate.md  shopify_customerUpdate.md  shopify_customer_query.md  shopify_customers_query.md  shopify_fulfillmentCancel.md  shopify_fulfillmentCreate.md  shopify_fulfillment_query.md  shopify_inventoryAdjustQuantities.md  shopify_inventoryItem_query.md  shopify_inventoryLevel_query.md  shopify_orderCreate.md  shopify_orderUpdate.md  shopify_order_query.md  shopify_orders_query.md  shopify_productCreate_documentation.md  shopify_productDelete.md  shopify_productUpdate.md  shopify_product_query.md  shopify_products_query.md  websearch_agent_linkedin_post.md
filesearch_agent/: main.py  pyproject.toml
filesearch_agent/output/: orderCreate.md  orderUpdate.md  productCreate.md  productUpdate.md
hello_agent/: .gitignore  README.md  main.py
practice/: main.py  pyproject.toml  scrap.py
research-agent/: README.md  main.py  pyproject.toml
research-agent/output/: FLOWithInventAi.md  bayerxarvrioagri.md  report.md  teneoai.md  uipath.md  xenonagriculture.md
toolsAndHandsOff/: README.md  main.py  pyproject.toml
websearch_agent/: README.md  main.py  pyproject.toml
