[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "openai-agents>=0.3.3",
    "pdfkit>=1.0.0",
    "playwright>=1.55.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "wkhtmltopdf>=0.2",
]
